Clusterização com o K-means

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 asttokens==2.4.1
 black==24.4.2
 click==8.1.7
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -45,15 +46,18 @@ Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32==306
 pyzmq==26.0.3
 rich==13.7.1
 scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
 stack-data==0.6.3
+tdqm==0.0.1
 threadpoolctl==3.5.0
 tomli==2.0.1
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
